fix padding for arbitraty text on small screens

--- a/src/pages/Donation/sections/ArbitraryTextPanel/ArbitraryTextPanel.module.css
+++ b/src/pages/Donation/sections/ArbitraryTextPanel/ArbitraryTextPanel.module.css
@@ -14,7 +14,7 @@
   flex-direction: row;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 1000px) {
   .text {
     margin-top: 0px !important;
     border-bottom-right-radius: 8px !important;
